<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/bar_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/themecolor"

        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="left"
                android:src="@drawable/arrow_right"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:visibility="invisible"
                />
            <TextView
                android:id="@+id/iv_search"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="#FCF9F9"
                android:text="搜索"
                android:visibility="invisible"
                />
        </FrameLayout>
        <EditText
            android:id="@+id/input"
            android:background="@drawable/search_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="输入书籍或作者名"
            android:padding="10dp"
            android:textSize="16dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="5dp"
            android:maxLines="1"
            android:singleLine="true"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/load"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/colorAccent" />
    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/show"
            android:layout_width="match_parent"
            android:overScrollMode="never"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>