<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



        <TextView
            android:textColor="#000000"
            android:text="text"
            android:background="#FCF9F0"
            android:textSize="16dp"
            android:paddingLeft="10dp"
            android:gravity="center|left"
            android:id="@+id/text"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

</RelativeLayout>